8346727: JvmtiVTMSTransitionDisabler deadlock